# qt-weather-app

./: CMakeLists.txt  run.sh
src/app/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt
src/models/: CMakeLists.txt
src/views/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
src/views/qml/: qml.qrc
